--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,12 @@
       "destination": "/dashboard",
       "permanent": true
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ]
 }
+
